<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_pen" android:title="@string/pen" />
    <item android:id="@+id/action_highlighter" android:title="@string/highlighter" />
    <item android:id="@+id/action_eraser" android:title="@string/eraser" />
    <item android:id="@+id/action_undo" android:title="@string/undo" />
    <item android:id="@+id/action_redo" android:title="@string/redo" />
    <item android:id="@+id/action_clear" android:title="@string/clear" />
    <item android:id="@+id/action_fit" android:title="@string/fit" />
    <item android:id="@+id/action_save" android:title="@string/save" />
    <item android:id="@+id/action_load" android:title="@string/load" />
</menu>
